# book-hub

./: .env  .gitignore  README.md  package-lock.json  package.json
backend/: .coverage  README.md  alembic.ini  init_testing_database.sql  pyproject.toml  startup.sh
backend/alembic/: env.py
backend/alembic/versions/: 2c6708219d3b_db_schema_sprint_1.py  2dcfeced086e_modified_followers_model_and_updated_.py  3d483a336e25_modified_followers.py  476b02b26488_modified_tables.py  7ac7b21bf041_biography_column.py  93a0eba87a7b_added_userfollow_table_and_modified_.py  a3985b92b941_db_schema_sprint_1.py  a5f2a9de6fdf_simple_user_table_v1.py  bd4d801fd7c3_db_schema_sprint_1.py  e8ce5a72fbb3_create_db_with_dummy_user.py
backend/app/: main.py  utils.py
backend/app/api/: deps.py  main.py
backend/app/api/routes/: account.py  books.py  comments.py  explorer.py  filters.py  followers.py  home.py  likes.py  login.py  posts.py  search.py  users.py
backend/app/core/: config.py  database.py  security.py
backend/app/crud/: __init__.py  book.py  comment.py  filter.py  followers.py  like.py  post.py  search.py  user.py  userFollow.py
backend/app/database/: database.py
backend/app/models/: __init__.py  account_info.py  book.py  comment.py  deps.py  filter.py  followers.py  like.py  post.py  postFilter.py  user.py  userFollow.py
backend/tests/: conftest.py  utils.py
backend/tests/api/: first_test.py  test_books.py  test_comments.py  test_followers.py  test_likes.py  test_posts.py  test_users.py
backend/tests/crud/: test_book.py  test_comment.py  test_like.py  test_likes.py  test_post.py
backend/tests/functional/unit/: test_account.py  test_book.py  test_comment.py  test_explorer.py  test_filter.py  test_followers.py  (+5 more)
(+134 files in other folders)
