[tool.poetry]
name = "app"
version = "0.1.0"
description = "Backend project for book-hub web page."
authors = ["AlejandroDS1 <acantelo7@alumnes.ub.edu>, gmarvega <mvegagar30@alumnes.ub.edu>, agelonca7 <agelonca7@alumnes.ub.edu>, malikmati90 <mmatiurr8@alumnes.ub.edu>, vparri08 <vparriol39@alumnes.ub.edu>, Soliam006 <wsottoja7@alumnes.ub.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
alembic = "^1.13.3"
fastapi = "^0.115.2"
uvicorn = "^0.32.0"
sqlmodel = "^0.0.22"
pymysql = "^1.1.1"
python-dotenv = "^1.0.1"
httpx = "^0.27.2"
cryptography = "^43.0.3"
pydantic-settings = "^2.6.0"
python-jose = "^3.3.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
bcrypt = "^4.2.1"

[tool.poetry.group.dev.dependencies]
python-multipart = "^0.0.16"
pytest = "^8.3.3"
pytest-cov = "^5.0.0"
pylint = "^3.3.2"
anybadge = "^1.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
